@@ -287,6 +287,9 @@ lighter making things easier to read.
 * (bug 4624) Namespace selection for Special:Whatlinkshere
   Scrolling backwards at Special:Whatlinkshere fixed
 * (bug 4777) Separate prev/next messages for Special:Whatlinkshere
+* Merge approx 15 missing Wikipedia language codes into wikipedia-interwiki.sql
+  based on Jeff Merkey's mediawiki-1.9.3.WG-20070316.tar.gz.bz2 archive.
+
 
 == Languages updated ==
 
